--- a/plugin.xml
+++ b/plugin.xml
@@ -34,7 +34,7 @@
   </js-module>
 
   <platform name="android">
-    <config-file parent="/*" target="res/xml/config.xml">
+    <config-file parent="/*" target="app/src/main/res/xml/config.xml">
       <feature name="NativeKeyboard">
         <param name="android-package" value="nl.xservices.plugins.nativekeyboard.NativeKeyboard" />
         <param name="onload" value="true" />
@@ -43,17 +43,17 @@
 
     <lib-file src="src/android/lib/nativekeyboard.jar" />
 
-    <source-file src="src/android/NativeKeyboard.java" target-dir="src/nl/xservices/plugins/nativekeyboard" />
+    <source-file src="src/android/NativeKeyboard.java" target-dir="app/src/main/src/nl/xservices/plugins/nativekeyboard" />
 
-    <source-file src="src/android/res/values/font_awesome.xml" target-dir="res/values" />
-    <source-file src="src/android/res/drawable/cursor.xml" target-dir="res/drawable" />
+    <source-file src="src/android/res/values/font_awesome.xml" target-dir="app/src/main/res/values" />
+    <source-file src="src/android/res/drawable/cursor.xml" target-dir="app/src/main/res/drawable" />
 
-    <source-file src="src/android/res/values/nativekeyboard.xml" target-dir="res/values" />
+    <source-file src="src/android/res/values/nativekeyboard.xml" target-dir="app/src/main/res/values" />
 
     <!-- cordova-android < 7 -->
-    <source-file src="src/android/assets/fonts/fontawesome-webfont.ttf" target-dir="assets/fonts" />
-    <source-file src="src/android/assets/fonts/ionicons.ttf" target-dir="assets/fonts" />
-    <config-file target="res/values/nativekeyboard.xml" parent="/*">
+    <source-file src="src/android/assets/fonts/fontawesome-webfont.ttf" target-dir="app/src/main/assets/fonts" />
+    <source-file src="src/android/assets/fonts/ionicons.ttf" target-dir="app/src/main/assets/fonts" />
+    <config-file target="app/src/main/res/values/nativekeyboard.xml" parent="/*">
       <string name="NativeKeyboardPluginLicense">$LICENSE</string>
     </config-file>
 
